# bevy-lightyear-avian-fps-template

./: .env  .env.example  .gitignore  Cargo.toml  README.md
assets/: map_collision.ron
assets/i18/: en.toml  zh.toml
assets/map_parts/: Alchemy_Main_Lab.glb  Castle_Main_Keep.glb  Forge_Main_Hall.glb  Observatory_Base.glb  Throne_Base_Platform.glb
room-service/: pom.xml
room-service/src/main/java/io/github/bevy_lightyear_fps_example/room/: RoomServiceApplication.java
room-service/src/main/java/io/github/bevy_lightyear_fps_example/room/config/: GameServerProperties.java  RoomServiceConfiguration.java
room-service/src/main/java/io/github/bevy_lightyear_fps_example/room/controller/: MatchController.java  RoomController.java  RoomExceptionHandler.java
room-service/src/main/java/io/github/bevy_lightyear_fps_example/room/model/: JoinRoomRequest.java  RoomEntryResponse.java  RoomSnapshotResponse.java  ValidateTokenRequest.java  ValidatedTokenResponse.java
room-service/src/main/java/io/github/bevy_lightyear_fps_example/room/service/: Room.java  RoomNotFoundException.java  RoomService.java  RoomServiceException.java
room-service/src/main/resources/: application.yml
room-service/src/test/java/io/github/bevy_lightyear_fps_example/room/controller/: JsonTestUtil.java  RoomControllerTest.java
src/: lib.rs  main.rs
src/vleue/: cli.rs  cli_connection.rs  mod.rs
src/vleue/feature/: mod.rs  physics.rs
src/vleue/feature/character/: animate.rs  free_cam.rs  input.rs  mod.rs  movement.rs  types.rs  view.rs
src/vleue/feature/combat/: attribute.rs  damage.rs  death.rs  hitbox.rs  mod.rs  projectile.rs  types.rs
src/vleue/feature/core/: connection.rs  health.rs  mod.rs  net.rs  room.rs  server_debug.rs  state.rs  window.rs
src/vleue/feature/core/i18n/: mod.rs  plugin.rs  resource.rs
src/vleue/feature/core/loading/: mod.rs
src/vleue/feature/core/settings/: mod.rs  persist.rs  plugin.rs  types.rs  ui.rs
src/vleue/feature/level/: loading.rs  mod.rs  types.rs
src/vleue/feature/level/map/: client.rs  mod.rs
src/vleue/feature/lobby/: matching.rs  mod.rs  ui.rs
src/vleue/util/: env.rs  log_util.rs  mod.rs
util/: Export-TracyFrame.ps1
